--- a/bank.html
+++ b/bank.html
@@ -16,7 +16,7 @@
         <main>
             <!-- Deposit,Withdraw & Balance show -->
             <section class="mt-8">
-                <div class=" grid grid-cols-3 gap-4 w-9/12 mx-auto text-white">
+                <div class=" grid md:grid-cols-3 sm:grid-cols-1 gap-4 w-9/12 mx-auto text-white">
                     <div class="bg-orange-500 p-12 rounded-xl">
                         <h4 class="text-3xl">Deposit</h4>
                         <h2 class="text-5xl">$<span id="deposit-total">00</span></h2>
@@ -32,7 +32,7 @@
                 </div>
             </section>
             <section class="mt-12">
-                <div class=" grid grid-cols-2 gap-4 w-9/12 mx-auto ">
+                <div class=" grid md:grid-cols-2 sm:grid-cols-1  gap-4 w-9/12 mx-auto ">
                     <div class="bg-violet-500 p-12 rounded-xl">
                         <h4 class="text-3xl mb-4 text-white">Please Deposit</h4>
                         <input class="w-9/12 block mb-4 px-3 " type="text"
